objects/ASI_MFM_Prepayment_Proposal_Change_Log__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Attachment_Count__c</fullName>
        <label>Attachment Count</label>
        <summaryFilterItems>
            <field>ASI_MFM_Prepayment_Change_Request_Att__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>KR Prepayment Request Attachment</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_MFM_Prepayment_Change_Request_Att__c.ASI_MFM_Prepayment_Change_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Case__c</fullName>
        <label>Case</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Period Change</fullName>
                </value>
                <value>
                    <fullName>Brand Added</fullName>
                </value>
                <value>
                    <fullName>Venue Added</fullName>
                </value>
                <value>
                    <fullName>Unit Cost Change</fullName>
                </value>
                <value>
                    <fullName>Payback</fullName>
                </value>
                <value>
                    <fullName>Write Off</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Is_Payment_Approved__c</fullName>
        <formula>if(TEXT(ASI_MFM_Payment__r.ASI_MFM_Status__c) == &apos;Approved&apos; || TEXT(ASI_MFM_Payment__r.ASI_MFM_Status__c) == &apos;Complete&apos;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Payment Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Last_Approved_Time__c</fullName>
        <label>Last Approved Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PM_Month__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment__c</fullName>
        <label>Payment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Payment__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR Payment, KR Payment Read-Only</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Payment__c.ASI_MFM_Pre_payment__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Payment__c</referenceTo>
        <relationshipName>Contract_Changes_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reason__c</fullName>
        <label>Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Changes_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prepayment_Proposal_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prepayment_Proposal_Change_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prepayment_Proposal_Change_Logs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Target_Volume__c</fullName>
        <label>Target Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Prepayment Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Payment__c</columns>
        <columns>ASI_MFM_PM_Month__c</columns>
        <columns>ASI_MFM_Case__c</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Requested_By__c</columns>
        <columns>ASI_MFM_Attachment_Count__c</columns>
        <columns>ASI_MFM_Last_Approved_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CL-{YY}{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prepayment Change Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_KR_Prepayment_Proposal_Change_Log</fullName>
        <active>true</active>
        <label>KR Prepayment Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Prepayment_Proposal_Change_Log_RO</fullName>
        <active>true</active>
        <label>KR Prepayment Change Request RO</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_KR_BlockAttachmentDel</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( RecordType.DeveloperName , &apos;ASI_MFM_KR_&apos; ) &amp;&amp; NOT( TEXT( ASI_MFM_Status__c ) == &apos;Draft&apos;) &amp;&amp; ASI_MFM_Attachment_Count__c != PRIORVALUE(ASI_MFM_Attachment_Count__c)</errorConditionFormula>
        <errorMessage>You are only allowed to add/remove attachment when status is Draft</errorMessage>
    </validationRules>
</CustomObject>